[gd_scene load_steps=3 format=3 uid="uid://b0nt7p102fv4g"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_bs2o1"]
[ext_resource type="Texture2D" uid="uid://b8ev7s1pnlfhj" path="res://assets/spr_background_space.png" id="1_fwibe"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bs2o1")

[node name="MenuImage" type="Sprite2D" parent="."]
scale = Vector2(1.40625, 1.875)
texture = ExtResource("1_fwibe")
centered = false

[node name="StartGameContainer" type="CenterContainer" parent="."]
offset_right = 900.0
offset_bottom = 1800.0

[node name="StartGameButton" type="Button" parent="StartGameContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "START GAME"

[node name="EnterNameContainer" type="VBoxContainer" parent="."]
offset_right = 900.0
offset_bottom = 850.0
alignment = 1

[node name="EnterNameLabel" type="Label" parent="EnterNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "If you want to submit your score and be able
to view the ranking after every gameplay,
please enter your name below
and keep an internet connection."
horizontal_alignment = 1

[node name="EnterNameInput" type="TextEdit" parent="EnterNameContainer"]
custom_minimum_size = Vector2(380, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
placeholder_text = " Enter your name..."
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false

[node name="LoadingGameLabel" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(500, 100)
offset_left = 200.0
offset_top = 850.0
offset_right = 700.0
offset_bottom = 950.0
theme_override_font_sizes/font_size = 50
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingGameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="gui_input" from="StartGameContainer/StartGameButton" to="." method="_on_start_game_button_gui_input"]
[connection signal="timeout" from="LoadingGameTimer" to="." method="_on_loading_game_timer_timeout"]
